[gd_scene load_steps=15 format=2]

[ext_resource path="res://PlacehoolderSprites/BG1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/SubHover.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Sub.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/QuizHover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Title.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/HelpHover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/HelpNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/QuizNormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/WardrobNormal.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/WardrobeHover.png" type="Texture" id=10]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=11]
[ext_resource path="res://DisplayScenes/MainMenu.gd" type="Script" id=12]
[ext_resource path="res://Sprites/Buttons/About.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Buttons/AboutHover.png" type="Texture" id=14]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -578.5
margin_top = -275.0
margin_right = 578.5
margin_bottom = 275.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="HBoxContainer"]
margin_right = 649.0
margin_bottom = 550.0
rect_min_size = Vector2( 550, 550 )
texture = ExtResource( 5 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 653.0
margin_right = 1157.0
margin_bottom = 550.0
alignment = 1

[node name="WardrobeMenu" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 504.0
margin_bottom = 277.0
rect_min_size = Vector2( 500, 256 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="SubMenu" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 504.0
margin_bottom = 396.0
rect_min_size = Vector2( 500, 115 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 504.0
margin_bottom = 528.0

[node name="Help" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 128 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Quiz" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 128 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="About" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -132.0
margin_right = 141.0
margin_bottom = -32.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InOverlay" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="button_up" from="HBoxContainer/VBoxContainer/WardrobeMenu" to="." method="_on_WardrobeMenu_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/SubMenu" to="." method="_on_SubMenu_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/HBoxContainer/Help" to="." method="_on_Help_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/HBoxContainer/Quiz" to="." method="_on_Quiz_button_up"]
[connection signal="button_up" from="About" to="." method="_on_About_button_up"]
